[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.4",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "matplotlib>=3.10.3",
    "mcp>=1.9.2",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "yfinance>=0.2.61",
]
